--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # These variables override settings in config.js
 
 # Server settings
+NODE_ENV=production
 PORT=3000
 
 # Image source prefix
@@ -22,3 +23,4 @@ CORS_CREDENTIALS=false
 
 # Presets (JSON format)
 # PRESETS={"thumbnail":"w=200,h=200,fit=cover","banner":"w=1024,h=128"}
+# ALLOW_CUSTOM_TRANSFORMS=true
