--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,84 @@
+# Node modules
 node_modules
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist
+*.tsbuildinfo
+
+# Environment files
 .env
 .env.local
+.env.*.local
 .env.example
-.git
-.gitignore
-README.md
-Dockerfile
-.dockerignore
-coverage
-.nyc_output
-.coverage
+
+# IDE files
 .vscode
 .idea
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Git
+.git
+.gitignore
+
+# Docker
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+
+# Documentation
+README.md
+TEST.md
+*.md
+
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage
+*.lcov
+.nyc_output
+.coverage
+
+# Dependency directories
+.npm
+.yarn
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Temporary folders
+tmp/
+temp/
+
+# SSL certificates
+ssl/
