--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Build outputs
+dist/
+*.tsbuildinfo
+
 # Environment variables
 .env
 .env.local
