--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,26 @@
 version: "3.8"
 
 services:
-  image-resize:
-    build: .
-    ports:
-      - "3000:3000"
+  repix:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      target: production
+    # Don't expose ports directly in production - use nginx
+    expose:
+      - "3000"
     environment:
+      - NODE_ENV=production
       - PORT=3000
       - PREFIX=https://
       - MAX_WIDTH=4096
       - MAX_HEIGHT=4096
       - DEFAULT_QUALITY=85
     volumes:
-      # Mount config file if you want to use custom config
-      # - ./config.js:/app/config.js:ro
-      - ./src:/app/src:ro
+      - type: tmpfs
+        target: /tmp
+        tmpfs:
+          size: 512M
     restart: unless-stopped
     healthcheck:
       test:
@@ -29,15 +35,70 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 30s
+    # Resource limits for better container management
+    deploy:
+      resources:
+        limits:
+          memory: 1G
+          cpus: "1.0"
+        reservations:
+          memory: 512M
+          cpus: "0.5"
+    # Security options
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+    read_only: true
+    tmpfs:
+      - /tmp:rw,noexec,nosuid,size=512m
 
-  # Optional: Add nginx for caching and load balancing
   nginx:
-    image: nginx:alpine
+    image: nginx:1.25-alpine
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - nginx_cache:/var/cache/nginx
+      - type: tmpfs
+        target: /var/run
+        tmpfs:
+          size: 64M
     depends_on:
-      - image-resize
+      repix:
+        condition: service_healthy
     restart: unless-stopped
+    # Resource limits
+    deploy:
+      resources:
+        limits:
+          memory: 256M
+          cpus: "0.5"
+        reservations:
+          memory: 128M
+          cpus: "0.25"
+    # Security options
+    security_opt:
+      - no-new-privileges:true
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - NET_BIND_SERVICE
+    read_only: true
+    tmpfs:
+      - /var/cache/nginx:rw,noexec,nosuid,size=1g
+      - /var/run:rw,noexec,nosuid,size=64m
+      - /tmp:rw,noexec,nosuid,size=64m
+
+volumes:
+  nginx_cache:
+    driver: local
