--- a/package.json
+++ b/package.json
@@ -1,32 +1,47 @@
 {
   "name": "repix",
   "version": "1.0.0",
-  "description": "Image resize service",
-  "main": "src/index.js",
+  "description": "Repix - High-performance image transformation service with advanced optimization and modern web formats support",
+  "main": "dist/index.js",
   "type": "module",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bansal/repix.git"
+  },
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "node --watch src/index.js",
-    "build": "echo 'No build step required'",
+    "start": "node dist/index.js",
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
     "test": "echo 'Tests not implemented yet'"
   },
   "keywords": [
+    "repix",
     "image",
     "resize",
+    "transformation",
+    "webp",
+    "avif",
+    "optimization",
     "hono",
     "sharp"
   ],
-  "author": "",
+  "author": "Jiten Bansal <hello@bansal.io>",
   "license": "MIT",
   "dependencies": {
     "@hono/node-server": "^1.0.0",
     "defu": "^6.1.4",
-    "dotenv": "^16.0.0",
+    "dotenv": "^16.6.1",
     "hono": "^4.0.0",
     "sharp": "^0.33.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "@types/node": "^20.0.0",
+    "nodemon": "^3.0.0",
+    "tsx": "^4.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0"
   },
   "engines": {
     "node": ">=18.0.0"
