--- a/nginx.conf
+++ b/nginx.conf
@@ -1,192 +1,71 @@
-# Optimize worker processes and connections
 worker_processes auto;
-worker_rlimit_nofile 65535;
 
 events {
-    worker_connections 65535;
-    use epoll;
-    multi_accept on;
+    worker_connections 1024;
 }
 
 http {
-    # Basic settings
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
     
-    # Optimize file operations
     sendfile on;
-    tcp_nopush on;
-    tcp_nodelay on;
     
-    # Security headers
-    server_tokens off;
-    add_header X-Frame-Options DENY always;
-    add_header X-Content-Type-Options nosniff always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=images:10m rate=5r/s;
-    
-    # Connection limiting  
-    limit_conn_zone $binary_remote_addr zone=perip:10m;
-    
-    # Upstream configuration with load balancing
+    # Upstream for image service
     upstream repix_service {
-        server repix:3000 max_fails=3 fail_timeout=30s;
-        keepalive 32;
-        keepalive_requests 1000;
-        keepalive_timeout 60s;
+        server 127.0.0.1:3000;
+        keepalive 16;
     }
 
-    # Enhanced cache configuration
+    # Cache for processed images
     proxy_cache_path /var/cache/nginx/images 
                      levels=1:2 
-                     keys_zone=images:50m 
-                     max_size=5g 
-                     inactive=30d 
-                     use_temp_path=off
-                     loader_threshold=300
-                     loader_files=200;
-    
-    proxy_cache_path /var/cache/nginx/api 
-                     levels=1:2 
-                     keys_zone=api:10m 
-                     max_size=100m 
-                     inactive=1h 
+                     keys_zone=repix_images:50m 
+                     max_size=2g 
+                     inactive=7d 
                      use_temp_path=off;
 
     server {
         listen 80;
-        listen [::]:80;
-        
-        # Buffer sizes
-        client_body_buffer_size 128k;
         client_max_body_size 10m;
-        client_header_buffer_size 4k;
-        large_client_header_buffers 4 8k;
-        
-        # Timeouts
-        client_body_timeout 12;
-        client_header_timeout 12;
-        keepalive_timeout 65;
-        send_timeout 10;
-        
-        # Compression
-        gzip on;
-        gzip_vary on;
-        gzip_min_length 1024;
-        gzip_comp_level 6;
-        gzip_types
-            image/jpeg
-            image/png
-            image/webp
-            image/avif
-            image/svg+xml
-            application/json
-            text/plain
-            text/css
-            text/javascript
-            application/javascript;
-        
-        # Brotli compression (if module available)
-        # brotli on;
-        # brotli_comp_level 6;
-        # brotli_types image/jpeg image/png image/webp image/avif;
-
-        # Health check endpoint
+        # Health check
         location /health {
             proxy_pass http://repix_service;
-            proxy_cache off;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            access_log off;
-            
-            # Rate limiting
-            limit_req zone=api burst=20 nodelay;
-            limit_conn perip 10;
         }
 
-        # Presets endpoint with caching
+        # Presets endpoint
         location /presets {
             proxy_pass http://repix_service;
-            proxy_cache api;
-            proxy_cache_valid 200 1h;
-            proxy_cache_valid 404 1m;
-            proxy_cache_use_stale error timeout updating http_500 http_502 http_503 http_504;
-            proxy_cache_lock on;
-            proxy_cache_lock_timeout 5s;
-            
-            # Headers
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            add_header X-Cache-Status $upstream_cache_status always;
-            
-            # Rate limiting
-            limit_req zone=api burst=10 nodelay;
-            limit_conn perip 5;
         }
 
-        # Image transformation endpoint with aggressive caching
+        # Image transformation with caching
         location /images/ {
             proxy_pass http://repix_service;
             
-            # Enhanced caching
-            proxy_cache images;
-            proxy_cache_valid 200 30d;
-            proxy_cache_valid 404 1m;
-            proxy_cache_valid 500 502 503 504 1m;
-            proxy_cache_use_stale error timeout invalid_header updating http_500 http_502 http_503 http_504;
-            proxy_cache_lock on;
-            proxy_cache_lock_timeout 10s;
-            proxy_cache_revalidate on;
+            # Cache processed images
+            proxy_cache repix_images;
+            proxy_cache_valid 200 7d;
+            proxy_cache_use_stale error timeout updating;
             
-            # Cache key optimization
-            proxy_cache_key "$scheme$request_method$host$request_uri";
-            
-            # Headers optimization
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
             
             # Timeouts for image processing
-            proxy_connect_timeout 5s;
-            proxy_send_timeout 120s;
-            proxy_read_timeout 120s;
+            proxy_read_timeout 60s;
+            proxy_send_timeout 60s;
             
-            # Buffer sizes for large images
-            proxy_buffering on;
-            proxy_buffer_size 128k;
-            proxy_buffers 4 256k;
-            proxy_busy_buffers_size 256k;
-            
-            # Cache status and performance headers
-            add_header X-Cache-Status $upstream_cache_status always;
-            add_header Cache-Control "public, max-age=2592000" always; # 30 days
-            add_header Vary "Accept-Encoding" always;
-            
-            # Rate limiting for image requests
-            limit_req zone=images burst=20 nodelay;
-            limit_conn perip 10;
+            # Cache headers
+            add_header Cache-Control "public, max-age=604800"; # 7 days
         }
         
-        # Fallback for other requests
+        # Default fallback
         location / {
             proxy_pass http://repix_service;
             proxy_http_version 1.1;
             proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            
-            # Rate limiting
-            limit_req zone=api burst=10 nodelay;
-            limit_conn perip 5;
         }
     }
 }
