refactoring whole structure

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,13 @@
 # Environment Configuration
 # These variables override settings in config.js
 
-# Server settings
-NODE_ENV=production
-PORT=3000
 
 # Image source prefix
 PREFIX=https://
 
 # Image processing limits
-MAX_WIDTH=4096
-MAX_HEIGHT=4096
+MAX_WIDTH=2048
+MAX_HEIGHT=2048
 DEFAULT_QUALITY=85
 FETCH_TIMEOUT=10000
 
@@ -21,6 +18,10 @@ CACHE_CONTROL="public, max-age=31536000, immutable"
 CORS_ORIGIN=*
 CORS_CREDENTIALS=false
 
+
+# ALLOW_CUSTOM_TRANSFORMS=true
+# ALLOW_DEFAULT_PRESETS=true
+# ALLOW_ORIGINAL_IMAGE=true  # Allow /original/{path} to serve images without processing
+
 # Presets (JSON format)
 # PRESETS={"thumbnail":"w=200,h=200,fit=cover","banner":"w=1024,h=128"}
-# ALLOW_CUSTOM_TRANSFORMS=true
