--- a/.dockerignore
+++ b/.dockerignore
@@ -1,84 +1,40 @@
-# Node modules
+# Node
 node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
+# Documentation
+docs
+
+# Build
 dist
 *.tsbuildinfo
 
-# Environment files
+# Env
 .env
-.env.local
-.env.*.local
-.env.example
+.env.*
+!.env.example
 
-# IDE files
+# IDE / OS
 .vscode
 .idea
-*.swp
-*.swo
-
-# OS files
 .DS_Store
-Thumbs.db
 
 # Git
 .git
 .gitignore
 
-# Docker
-Dockerfile*
+# Docker / platform configs (not needed in image)
 docker-compose*.yml
 .dockerignore
-
-# Documentation
-README.md
-TEST.md
+wrangler.toml
+worker/
+DEPLOY.md
 *.md
 
-# Logs
+# Logs / temp
 logs
 *.log
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage
-*.lcov
-.nyc_output
-.coverage
-
-# Dependency directories
-.npm
-.yarn
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Temporary folders
-tmp/
-temp/
-
-# SSL certificates
-ssl/
+tmp
+temp
