--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,103 +2,11 @@ version: "3.8"
 
 services:
   repix:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: production
-    # Don't expose ports directly in production - use nginx
-    expose:
-      - "3000"
-    environment:
-      - NODE_ENV=production
-      - PORT=3000
-      - PREFIX=https://
-      - MAX_WIDTH=4096
-      - MAX_HEIGHT=4096
-      - DEFAULT_QUALITY=85
-    volumes:
-      - type: tmpfs
-        target: /tmp
-        tmpfs:
-          size: 512M
+    build: .
+    ports:
+      - "3210:3210"
     restart: unless-stopped
     healthcheck:
-      test:
-        [
-          "CMD",
-          "wget",
-          "--no-verbose",
-          "--tries=1",
-          "--spider",
-          "http://localhost:3000/health",
-        ]
+      test: ["CMD", "wget", "-q", "-O", "/dev/null", "http://localhost:3210/health"]
       interval: 30s
-      timeout: 10s
       retries: 3
-      start_period: 30s
-    # Resource limits for better container management
-    deploy:
-      resources:
-        limits:
-          memory: 1G
-          cpus: "1.0"
-        reservations:
-          memory: 512M
-          cpus: "0.5"
-    # Security options
-    security_opt:
-      - no-new-privileges:true
-    cap_drop:
-      - ALL
-    cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid,size=512m
-
-  nginx:
-    image: nginx:1.25-alpine
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - nginx_cache:/var/cache/nginx
-      - type: tmpfs
-        target: /var/run
-        tmpfs:
-          size: 64M
-    depends_on:
-      repix:
-        condition: service_healthy
-    restart: unless-stopped
-    # Resource limits
-    deploy:
-      resources:
-        limits:
-          memory: 256M
-          cpus: "0.5"
-        reservations:
-          memory: 128M
-          cpus: "0.25"
-    # Security options
-    security_opt:
-      - no-new-privileges:true
-    cap_drop:
-      - ALL
-    cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /var/cache/nginx:rw,noexec,nosuid,size=1g
-      - /var/run:rw,noexec,nosuid,size=64m
-      - /tmp:rw,noexec,nosuid,size=64m
-
-volumes:
-  nginx_cache:
-    driver: local
