--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "build": "tsc && vite build",
+    "cf:deploy": "wrangler deploy",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "test": "echo 'Tests not implemented yet'"
+    "test": "vitest run",
+    "test:watch": "vitest"
   },
   "keywords": [
     "repix",
@@ -30,18 +32,20 @@
   "author": "Jiten Bansal <hello@bansal.io>",
   "license": "MIT",
   "dependencies": {
-    "@hono/node-server": "^1.19.6",
+    "@hono/node-server": "^1.19.9",
     "defu": "^6.1.4",
-    "dotenv": "^17.2.3",
-    "hono": "^4.10.7",
+    "dotenv": "^17.3.1",
+    "hono": "^4.12.0",
     "sharp": "^0.34.5"
   },
   "devDependencies": {
-    "@types/node": "^24.10.1",
-    "nodemon": "^3.1.11",
+    "@cloudflare/containers": "^0.1.0",
+    "@types/node": "^25.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
-    "vite": "^7.2.7"
+    "vite": "^7.3.1",
+    "vitest": "^4.0.18",
+    "wrangler": "^4.0.0"
   },
   "engines": {
     "node": ">=22.0.0"
